--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <title>React App</title>
 </head>
 
-<body class="font-serif">
+<body class="box-border">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
